@@ -567,6 +567,12 @@
    <id>printer/Samsung-ML-85</id><!-- Samsung ML-85 -->
   </printer>
   <printer>
+   <id>printer/Samsung-ML-1250</id><!-- Samsung ML-1250 -->
+   <comments>
+    <en>Up to 600dpi</en>
+   </comments>
+  </printer>
+  <printer>
    <id>printer/Samsung-ML-4600</id><!-- Samsung ML-4600 -->
   </printer>
   <printer>
