@@ -34,7 +34,7 @@
    <id>printer/Brother-HL-1670N</id><!-- Brother HL-1670N -->
   </printer>
   <printer>
-   <id>printer/Brother-HL-1850e</id>
+   <id>printer/Brother-HL-1850</id>
   </printer>
   <printer>
    <id>printer/Brother-HL-1870N</id>
@@ -344,6 +344,9 @@
   </printer>
   <printer>
    <id>printer/Ricoh-Aficio_220</id><!-- Ricoh Aficio 220 -->
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1250</id><!-- Samsung ML-1250 -->
   </printer>
   <printer>
    <id>printer/Samsung-ML-4600</id><!-- Samsung ML-4600 -->
