@@ -49,7 +49,7 @@
    <id>printer/Brother-HL-1670N</id><!-- Brother HL-1670N -->
   </printer>
   <printer>
-   <id>printer/Brother-HL-1850e</id>
+   <id>printer/Brother-HL-1850</id>
   </printer>
   <printer>
    <id>printer/Brother-HL-1870N</id>
@@ -370,6 +370,9 @@ HP2100M worked fine (i.e. no need to compile IEEE1284 into your kernel).</en>
   </printer>
   <printer>
    <id>printer/Ricoh-Aficio_220</id><!-- Ricoh Aficio 220 -->
+  </printer>
+  <printer>
+   <id>printer/Samsung-ML-1250</id><!-- Samsung ML-1250 -->
   </printer>
   <printer>
    <id>printer/Samsung-ML-4600</id><!-- Samsung ML-4600 -->
