@@ -164,6 +164,11 @@
      </constraint>
      <constraint sense="false">
       <make>Samsung</make>
+      <model>ML-1250</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Samsung</make>
       <model>ML-7050</model>
       <arg_defval>na</arg_defval>
      </constraint>
