@@ -1,0 +1,43 @@
+<printer id="printer/Samsung-ML-1250">
+  <make>Samsung</make>
+  <model>ML-1250</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>600</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>
+
+	Toner and drum in one unit, 2500 pages, printer comes with
+	1000 pages starter cartridge
+
+	</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.samsungelectronics.co.uk/cgi-bin/ecuk/main/samsunguk_global.jsp?target_pgm=/product/product_detail.jsp&amp;prod_id=ML-1250%2fXEU</url>
+  <lang>
+    <pcl level="6"/>
+    <!--no pjl-->
+    <text>
+      <charset>us-ascii</charset>      
+    </text>
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  <driver>pxlmono</driver>
+  <unverified/><!--no "contrib_url"-->
+  <comments>
+    <en>
+
+    Small desktop laser printer, 12 pages/min, USB only.
+
+    </en>
+  </comments>
+</printer>
