@@ -2,6 +2,14 @@
 
 	* printer/HP-LaserJet_1050.xml: Updated text.
 
+	* printer/Samsung-ML-1250.xml, driver/pxlmono.xml,
+	  driver/lj5gray.xml, driver/lj5mono.xml, driver/lj4dith.xml,
+	  driver/ljet4.xml.xml, opt/160.xml: Added Samsung ML-1250.
+
+	* driver/pxlmono.xml, driver/lj5gray.xml, driver/lj5mono.xml: Fixed
+	  bug of using "Brother ML-1850e" instead of "Brother ML-1850" in
+	  the printer lists.
+	
 2003-08-11  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/Apple-LaserWriter_Pro_630.xml: Added additional comments
